--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -384,16 +384,6 @@ global:
     building_extrude_height: |              # building extrude height logic
         function() { return feature.height || 20; }
 
-
-fonts:
-    Montserrat:
-        url: https://fonts.gstatic.com/s/montserrat/v7/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff
-    Varela:
-        url: https://fonts.gstatic.com/s/varela/v7/maB5vWJo0EAVzvHPjBkLM-vvDin1pK8aKteLpeZ5c0A.woff
-    Quicksand:
-        url: https://fonts.gstatic.com/s/quicksand/v5/32nyIRHyCu6iqEka_hbKsqRDOzjiPcYnFooOUGCOsRk.woff
-
-
 textures:
     pois:
         url: images/poi_icons_18@2x.png
@@ -769,6 +759,14 @@ fonts:
           url: fonts/OpenSans-SemiboldItalic.woff
         - weight: bold
           url: fonts/OpenSans-Bold.woff
+    Montserrat:
+        - weight: normal
+          #url: https://fonts.gstatic.com/s/montserrat/v7/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff
+          url: fonts/Montserrat-Regular.woff
+    Varela:
+        - weight: normal
+          #url: https://fonts.gstatic.com/s/varela/v7/maB5vWJo0EAVzvHPjBkLM-vvDin1pK8aKteLpeZ5c0A.woff
+          url: fonts/Varela-Regular.woff
 
 sources:
     mapzen:
@@ -5511,8 +5509,7 @@ layers:
                         font:
                             family: Varela
                             size: 9px
-                            weight: 400
-                            #weight: normal
+                            weight: normal
                             fill: [0.225,0.561,0.415]
                             # fill: global.text_fill
                             transform: uppercase
@@ -5534,8 +5531,7 @@ layers:
                         font:
                             family: Varela
                             size: 10px
-                            weight: 400
-                            #weight: normal
+                            weight: normal
                             fill: [0.225,0.561,0.415]
                             # fill: [0.300,0.300,0.300]
                             transform: uppercase
@@ -5557,8 +5553,7 @@ layers:
                         font:
                             family: Varela
                             size: 11px
-                            weight: 400
-                            #weight: normal
+                            weight: normal
                             fill: [0.225,0.561,0.415]
                             # fill: [0.35,0.35,0.35]
                             transform: uppercase
@@ -5580,8 +5575,7 @@ layers:
                         font:
                             family: Varela
                             size: 13px
-                            weight: 400
-                            #weight: normal
+                            weight: normal
                             fill: [0.225,0.561,0.415]
                             # fill: [0.000,0.000,0.000,0.500]
                             transform: uppercase
@@ -6084,7 +6078,7 @@ layers:
                         text:
                             visible: global.text_visible_landuse_green
                             font:
-                                weight: 600
+                                #weight: 600
                                 fill: [0.20,0.20,0.20]
                                 #size: 10px
                                 # stroke: { color: global.text_stroke, width: 4 }
@@ -6331,7 +6325,7 @@ layers:
                             font:
                                 fill: [0.20,0.20,0.20] # *text_fill
                                 # size: 10px
-                                weight: 600
+                                # weight: 600
                                 stroke: { color: global.text_stroke, width: 4 }
                 low-priority-early:
                     filter: { kind_tile_rank: { min: 5 }, $zoom: { min: 0, max: 13 } }
@@ -6387,7 +6381,7 @@ layers:
                             font:
                                 fill: [0.20,0.20,0.20] # *text_fill
     #                            size: 10px
-                                weight: 600
+                                #weight: 600
                                 stroke: { color: global.text_stroke, width: 4 }
                 early-sizing:
                     filter: { $zoom: { max: 14 } }
