--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -939,19 +939,16 @@ styles:
     ux-location-gem-overlay:
         base: points
         texture: pois
-        interactive: true
         blend: overlay
         blend_order: 2
     ux-icons-overlay:
         base: points
         texture: pois
-        interactive: true
         blend: overlay
         blend_order: 3
     sdk-point-overlay:
         base: points
         texture: pois
-        interactive: true
         blend: overlay
         blend_order: 3
     sdk-line-overlay:
@@ -997,7 +994,6 @@ layers:
         data: { source: mz_current_location }
         draw:
             ux-location-gem-overlay:
-                interactive: true
                 sprite: ux-current-location
                 size: 36px
                 collide: false
@@ -1006,7 +1002,6 @@ layers:
         data: { source: mz_route_location }
         draw:
             ux-location-gem-overlay:
-                interactive: true
                 sprite: ux-route-arrow
                 size: [60px,60px]
                 collide: false
@@ -1015,7 +1010,6 @@ layers:
         data: { source: mz_route_start }
         draw:
             ux-icons-overlay:
-                interactive: true
                 priority: 1
                 sprite: ux-route-start
                 size: [36px,46px]
@@ -1026,7 +1020,6 @@ layers:
         data: { source: mz_route_destination }
         draw:
             ux-icons-overlay:
-                interactive: true
                 priority: 1
                 sprite: ux-route-stop
                 size: [36px,46px]
@@ -1037,7 +1030,6 @@ layers:
         data: { source: mz_route_transit_stop }
         draw:
             ux-icons-overlay:
-                interactive: true
                 sprite: ux-transit-stop
                 size: [15px,15px]
                 collide: false
@@ -1073,7 +1065,6 @@ layers:
         data: { source: mz_default_point }
         draw:
             sdk-point-overlay:
-                interactive: true
                 sprite: ux-search-active
                 size: [36px,54px]
                 collide: false
@@ -1245,7 +1236,6 @@ layers:
             filter: { not: { kind: [platform] }, $zoom: { min: 14 } }
             draw:
                 lines:
-                    interactive: true
                     order: function() { return feature.sort_key || 275; }
             railway:
                 filter: { kind: [railway,train] }
@@ -1312,7 +1302,6 @@ layers:
         filter: { not: { kind: rail } }
         draw:
             lines:
-                interactive: true
                 # let roads sort themselves past zoom 14 (using server value)
                 order: global.feature_order
                 # but give them all the same outline
@@ -2550,7 +2539,6 @@ layers:
             filter: { kind: racetrack }
             draw:
                 lines:
-                    interactive: true
                     cap: round
                     join: round
                     color: [0.600,0.667,0.627]
@@ -2601,7 +2589,6 @@ layers:
             filter: { kind: aerialway }
             draw:
                 lines:
-                    interactive: true
                     color: '#444'
                     width: [[14, 0.5px], [15, 1.0px], [16, 2m]]
             gondola_cable_car:
@@ -2662,7 +2649,6 @@ layers:
             filter: { kind: rail, not: { railway: [subway,light_rail,tram] } }
             draw:
                 lines:
-                    interactive: true
                     order: global.feature_order
                     color: [0.588,0.671,0.698]
                     width: [[12,0px],[13,0.25px],[14,0.4px],[15,0.75px],[16,0.75px],[18,1m]]
@@ -2729,7 +2715,6 @@ layers:
 #                           }
 #                       }
 #                   }
-                interactive: true
             lines:
                 style: lines
                 order: 330
@@ -2738,9 +2723,9 @@ layers:
                 width: [[13, 0.55px], [15, 0.65px], [16,0.75px], [18, 1.25px]]
 
         # turn interactive feature selection on for buildings with names
-        interactive:
-            filter: { name: true }
-            draw: { polygons: { interactive: true } }
+        #interactive:
+            #filter: { name: true }
+            #draw: { polygons: { interactive: true } }
 
         # building footprints, pre-extrusion
         footprints:
@@ -2879,7 +2864,6 @@ layers:
             draw:
                 text-blend-order:
                     text_source: global.ux_language_text_source
-                    interactive: true
                     move_into_tile: true
                     priority: 70
                     visible: global.text_visible_building
@@ -2923,7 +2907,6 @@ layers:
             draw:
                 text-blend-order:
                     text_source: global.ux_language_text_source
-                    interactive: true
                     order: 7
                     visible: global.text_visible_address
                     text_source: addr_housenumber
@@ -2939,7 +2922,6 @@ layers:
         # country subdivisions (states, provinces)
         draw:
             lines:
-                interactive: true
                 order: global.feature_order
 #                color: red
 #                width: [[9, 1px], [14, 2px], [16, 3px], [17, 8m]]
@@ -3246,7 +3228,6 @@ layers:
                     # debug testing
                     #collide: false
                     text:
-                        interactive: true
                         # debug testing
                         #collide: false
 
@@ -4690,7 +4671,6 @@ layers:
                     draw:
                         text-blend-order:
                             priority: 8
-                            interactive: false
                             visible: false
 
                 z13places-2-ne:
@@ -4891,7 +4871,6 @@ layers:
                     text_source: global.ux_language_text_source
                     visible: false    # labels are enabled by each layer below
                     move_into_tile: false # preserves text alignment w/icons in JS
-                    interactive: true
                     priority: 66
                     font:
                         family: global.text_font_family
@@ -4903,7 +4882,6 @@ layers:
                 text_source: global.ux_language_text_source
                 visible: false    # labels are enabled by each layer below
                 move_into_tile: false # preserves text alignment w/icons in JS
-                interactive: true
                 priority: 66
                 font:
                     family: global.text_font_family
@@ -5211,7 +5189,6 @@ layers:
                         sprite: beach
                         text:
                             visible: global.text_visible_landuse_green
-                            interactive: true
                             font:
                                 fill: global.text_fill_beach
                                 stroke:
@@ -5509,7 +5486,6 @@ layers:
                     text-blend-order:
                         visible: true
                         priority: 44
-                        interactive: true
                         text_wrap: 10
                         font:
                             weight: 400
@@ -5826,7 +5802,6 @@ layers:
                     text-blend-order:
                         visible: false
                         priority: 45
-                        interactive: true
                         text_wrap: 10
                         font:
                             weight: 400
@@ -6353,7 +6328,6 @@ layers:
                     visible: false
                 text-blend-order:
                     visible: global.text_visible_airport_gate
-                    interactive: true
                     text_source: ref
                     font:
                         fill: global.text_fill_exits
@@ -6373,7 +6347,6 @@ layers:
                     visible: false
                 text-blend-order:
                     visible: global.text_visible_exits
-                    interactive: true
                     text_source: ref
                     priority: 1
                     font:
@@ -6610,7 +6583,6 @@ layers:
 #                           return 1000;
 #                       }
 #                   }
-                interactive: true
                 #debug for polygon merging
                 #color: |
 #                   function() {
@@ -6652,7 +6624,6 @@ layers:
             draw:
                 text-blend-order:
                     text_source: global.ux_language_text_source
-                    interactive: true
                     move_into_tile: true
                     priority: 100
                     visible: global.text_visible_landuse_generic
@@ -7207,7 +7178,6 @@ layers:
                 visible: global.sdk_transit_overlay
                 color: purple
                 width: [[5,1.5px],[6,2px],[11,3px],[18,4px]]
-                interactive: true
                 outline:
                     color: [1.,1.,1.,.8]
                     width: [[7,0px],[8,0.25px],[9,0.5px],[12,1.0px],[13,1.75px],[14,2px]]
@@ -7356,7 +7326,6 @@ layers:
                     move_into_tile: false # preserves text alignment w/icons in JS
                     #anchor: bottom
                     #offset: [[13, [0, 6px]], [16, [0, 8px]], [19, [0, 10px]]] # offset tracks alongside icon size (half icon height)
-                    interactive: true
                     priority: 16
                     font:
                         weight: 500
@@ -7480,7 +7449,6 @@ layers:
                     size: [[13, 8px], [16, 10px], [17, 12px], [18, 18px]]
                     sprite: bus-station
                     text:
-                        interactive: true
                         font:
                             fill: black
                             size: 12px
@@ -7495,7 +7463,6 @@ layers:
                     sprite: bus-station
                     priority: 17
                     text:
-                        interactive: true
                         priority: 18
                         font:
                             fill: black
@@ -7521,7 +7488,6 @@ layers:
                     text:
                         #offset: [[17, [0, 6px]], [19, [0, 7px]]] # offset tracks alongside icon size (half icon height)
                         priority: 20
-                        interactive: true
                         text_source: function() { if( feature.ref || feature.name ) { if( feature.ref && feature.name ) { return '[' + feature.ref + ']\n' + feature.name; } else { return feature.name; } } else { return "Entrance"; } }
                         font:
                             fill: black
