--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -455,11 +455,11 @@ textures:
             camp_site: [828, 84, 38, 38]
             summer_camp: [828, 84, 38, 38]
             caravan_site: [828, 84, 38, 38]
-            capital-l: [360, 858, 32, 32]
-            capital-m: [328, 858, 24, 24]
-            capital-s: [298, 858, 20, 20]
-            capital-xl: [448, 858, 40, 40]
-            capital-xs: [276, 858, 16, 16]
+            capital-l: [360, 856, 32, 32]
+            capital-m: [328, 856, 24, 24]
+            capital-s: [298, 856, 20, 20]
+            capital-xl: [448, 856, 40, 40]
+            capital-xs: [276, 856, 16, 16]
             car: [908, 126, 38, 38]
             category-namespace-mobility: [908, 126, 38, 38]
             category-predicate-mobility: [908, 126, 38, 38]
@@ -642,15 +642,15 @@ textures:
             amusement_ride: [0, 126, 38, 38]
             toilets: [874, 84, 38, 38]
             townspot-l: [748, 856, 32, 32]
-            townspot-l-rev: [576, 858, 32, 32]
+            townspot-l-rev: [576, 856, 32, 32]
             townspot-m: [716, 856, 24, 24]
-            townspot-m-rev: [544, 858, 24, 24]
+            townspot-m-rev: [544, 856, 24, 24]
             townspot-s: [688, 856, 20, 20]
-            townspot-s-rev: [516, 858, 20, 20]
+            townspot-s-rev: [516, 856, 20, 20]
             townspot-xl: [788, 856, 40, 40]
-            townspot-xl-rev: [616, 858, 40, 40]
+            townspot-xl-rev: [616, 856, 40, 40]
             townspot-xs: [664, 856, 16, 16]
-            townspot-xs-rev: [496, 858, 12, 12]
+            townspot-xs-rev: [496, 856, 12, 12]
             toys: [916, 0, 38, 38]
             traffic_signals: [672, 752, 38, 38]
             train_station: [410, 0, 38, 38]
@@ -4042,7 +4042,7 @@ layers:
                         # debug testing
                         #collide: false
                         font:
-                            size: [[5,6px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px]]
+                            size: [[5,6px],[8,10px],[12,12px]]
 
             no-townspot:
                 filter: { $zoom: { min: 11 } }
@@ -4050,6 +4050,22 @@ layers:
                     icons:
                         text:
                             anchor: center
+            z8-50k-below:
+                filter: { $zoom: [5,6,7,8], population: { max: 50000 } }
+                draw:
+                    icons:
+                        visible: false
+            z9-20k-below:
+                filter: { $zoom: [5,6,7,8,9], population: { max: 10000 } }
+                draw:
+                    icons:
+                        visible: false
+            z9-no-population:
+                filter: { $zoom: [5,6,7,8,9], population: false }
+                draw:
+                    icons:
+                        visible: false
+
 
             population-10m-up:
                 filter:
@@ -4062,7 +4078,7 @@ layers:
                         priority: 6
                         text:
                             font:
-                                size: [[5,11px],[8,16px],[9,17px],[10,17px],[11,18px],[12,18px],[13,0px]]
+                                size: [[6,15px],[8,16px],[10,18px],[11,18px],[12,18px],[13,0px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4081,7 +4097,7 @@ layers:
                         priority: 7
                         text:
                             font:
-                                size: [[5,11px],[8,16px],[9,17px],[10,17px],[11,18px],[12,18px],[13,0px]]
+                                size: [[6,13px],[8,16px],[10,18px],[11,18px],[12,18px],[13,0px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4100,7 +4116,7 @@ layers:
                         priority: 9
                         text:
                             font:
-                                size: [[5,11px],[8,16px],[9,17px],[10,17px],[11,18px],[12,18px],[13,0px]]
+                                size: [[6,13px],[8,16px],[10,18px],[11,18px],[12,18px],[13,0px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4119,7 +4135,7 @@ layers:
                         priority: 11
                         text:
                             font:
-                                size: [[5,10px],[8,13px],[9,13px],[10,13px],[11,14px],[12,14px],[13,0px]]
+                                size: [[6,11px],[8,14px],[10,14px],[11,14px],[12,14px],[13,0px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4138,7 +4154,7 @@ layers:
                         priority: 13
                         text:
                             font:
-                                size: [[5,10px],[8,13px],[9,13px],[10,13px],[11,13px],[12,13px],[13,0px]]
+                                size: [[6,10px],[8,12px],[10,14px],[11,13px],[12,13px],[13,0px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4157,7 +4173,7 @@ layers:
                         priority: 15
                         text:
                             font:
-                                size: [[5,9px],[8,13px],[9,13px],[10,13px],[11,13px],[12,13px],[13,14px]]
+                                size: [[6,10px],[8,12px],[10,12px],[11,13px],[12,13px],[13,14px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4176,8 +4192,8 @@ layers:
                         priority: 17
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.25,0.25,0.25]]]
-                                size: [[5,7px],[8,10px],[9,9px],[10,11px],[11,11px],[12,12px],[13,14px]]
+                                fill: [0.30,0.30,0.30]
+                                size: [[6,10px],[8,10px],[10,12px],[11,11px],[12,12px],[13,14px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4185,13 +4201,11 @@ layers:
                             size: [[10,5px],[11,0px]]
                             sprite: capital-m
                             priority: 16
+
             population-20k-50k:
                 filter:
                     all:
                         - { population: { min: 20000, max: 50000 } }
-                    any:
-                        - country_capital: true
-                        - region_capital: true
                 draw:
                     icons:
                         size: [[8,5px],[9,5px],[10,5px],[11,0px]]
@@ -4199,8 +4213,8 @@ layers:
                         priority: 19
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.35,0.35,0.35]]]
-                                size: [[5,7px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px],[13,12px]]
+                                fill: [0.30,0.30,0.30]
+                                size: [[9,10px],[12,11px],[13,12px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4219,8 +4233,8 @@ layers:
                         priority: 21
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.35,0.35,0.35]]]
-                                size: [[5,6px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px],[13,12px]]
+                                fill: [0.35,0.35,0.35]
+                                size: [[9,10px],[12,11px],[13,12px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4239,8 +4253,8 @@ layers:
                         priority: 23
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.35,0.35,0.35]]]
-                                size: [[5,6px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px],[13,12px]]
+                                fill: [0.35,0.35,0.35]
+                                size: [[9,9px],[10,10px],[12,11px],[13,12px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4259,8 +4273,8 @@ layers:
                         priority: 25
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.35,0.35,0.35]]]
-                                size: [[5,6px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px],[13,12px]]
+                                fill: [0.35,0.35,0.35]
+                                size: [[9,7px],[10,10px],[12,11px],[13,12px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4279,8 +4293,8 @@ layers:
                         priority: 27
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.35,0.35,0.35]]]
-                                size: [[5,6px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px]]
+                                fill: [0.35,0.35,0.35]
+                                size: [[9,7px],[10,10px],[12,11px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
@@ -4299,8 +4313,8 @@ layers:
                         priority: 28
                         text:
                             font:
-                                fill: [[8,[0.30,0.30,0.30]],[9,[0.30,0.30,0.30]],[10,[0.35,0.35,0.35]]]
-                                size: [[5,6px],[8,10px],[9,9px],[10,9px],[11,9px],[12,11px]]
+                                fill: [0.35,0.35,0.35]
+                                size: [[9,7px],[10,10px],[12,11px]]
                 capital:
                     filter: { country_capital: true, $zoom: { min: 5 } }
                     draw:
